--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore alias magni amet enim facere. Earum, nemo! Quibusdam accusantium quisquam, voluptatum animi temporibus sit, odit, harum doloribus nemo porro officiis eaque?git</p>
     </div>
+
+    <div>
+        <img src="./img/resto.jpeg" alt="DW">
+    </div>
     
 </body>
 </html>
