Agregamos html de contacto

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div>
         <img src="./img/resto.jpeg" alt="DW">
     </div>
+
+    <div>
+        <a href="./contacto.html">Ir a contacto</a>
+    </div>
     
 </body>
 </html>
